syntax = "proto3";

package http;

option go_package = "github.com/axmz/go-saga-microservices/pkg/proto/http;http";

// Product for inventory
message Product {
  int64 id = 1;
  string name = 2;
  string sku = 3;
  string status = 4;
  double price = 5;
}

// Used in CreateOrderRequest
message OrderItem {
  string product_id = 1;
}

// Order for responses
message Order {
  string id = 1;
  repeated OrderItem items = 2;
  string status = 3;
  string created_at = 4;
  string updated_at = 5;
}

// Order Service HTTP APIs
message CreateOrderRequest {
  repeated OrderItem items = 1;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

// Payment Service HTTP APIs
message PaymentSuccessRequest {
  string order_id = 1;
}

message PaymentSuccessResponse {
  bool success = 1;
}

message PaymentFailRequest {
  string order_id = 1;
}

message PaymentFailResponse {
  bool success = 1;
}

// Inventory Service HTTP APIs
message GetProductsRequest {}

message GetProductsResponse {
  repeated Product products = 1;
}

// WebSocket messages
message OrderStatusUpdate {
  string order_id = 1;
  string status = 2;
  string timestamp = 3;
}
